--- a/index.html
+++ b/index.html
@@ -39,5 +39,13 @@
              window.deviceName.innerHTML = 'You are: ' + window.webxdc.selfName;
          })()
         </script>
+
+        <!-- Uncomment to include developer tools in your webxdc to debug it inside Delta Chat -->
+        <!--
+             <script type="module">
+             import init from 'eruda'
+             init.init();
+             </script>
+        -->
     </body>
 </html>
