use new @webxcd/vite-plugins package

--- a/index.html
+++ b/index.html
@@ -3,31 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-
     <script src="webxdc.js"></script>
   </head>
   <body>
-    <h1>Chat</h1>
-    <form>
-      <input
-        id="input"
-        type="text"
-        autocomplete="off"
-        placeholder="Message"
-        autofocus
-      />
-      <input
-        class="btn"
-        type="submit"
-        onclick="sendMsg(); return false;"
-        value="Send"
-      />
-    </form>
-    <p id="chat-area"></p>
-    <p>
-      <em><small id="deviceName"></small></em>
-    </p>
-    <script src="./js/main.js" type="module"></script>
+    <script type="module">
+     window.webxdc.sendUpdate({payload: "hello world!"}, "");
+    </script>
   </body>
 </html>
